--- a/fragment2/src/main/res/layout/content_welcome.xml
+++ b/fragment2/src/main/res/layout/content_welcome.xml
@@ -16,7 +16,7 @@
  -->
 
 <view xmlns:android="http://schemas.android.com/apk/res/android"
-    class="com.example.android.hcgallery.FitCenterFrameLayout"
+    class="com.neolun.dev.fragment2.FitCenterFrameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
