--- a/fragment2/src/main/res/values/styles.xml
+++ b/fragment2/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
   limitations under the License.
  -->
 <resources>
-    <style name="ActionBar" parent="@android:style/Widget.Holo.ActionBar" />
+    <style name="ActionBar" parent="Theme.AppCompat.Light.DarkActionBar" />
 
     <style name="ActionBar.Light" parent="@style/ActionBar">
         <item name="android:background">@color/actionbar_background_light</item>
@@ -25,7 +25,7 @@
         <item name="android:background">@color/actionbar_background_dark</item>
     </style>
 
-    <style name="AppTheme.Light" parent="@android:style/Theme.Holo.Light">
+    <style name="AppTheme.Light" parent="Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/ActionBar.Light</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="listDragShadowBackground">@android:color/background_light</item>
@@ -34,7 +34,7 @@
         <item name="menuIconShare">@drawable/ic_menu_share_holo_light</item>
     </style>
 
-    <style name="AppTheme.Dark" parent="@android:style/Theme.Holo">
+    <style name="AppTheme.Dark" parent="Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/ActionBar.Dark</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="listDragShadowBackground">@android:color/background_dark</item>
